examples/test/testpolicy4110.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4110
  namespace: namespace286
spec:
  podSelector:
    matchLabels:
      key5: value23
      key21: value9
      key39: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value21
      podSelector:
        matchLabels:
          key37: value14
          key44: value21
